at instead of of

--- a/index.html
+++ b/index.html
@@ -471,7 +471,7 @@
                         <td><strong>Postdoctoral researcher</strong></br>
                             <a class="other_links" href="https://team.inria.fr/mathneuro/" target="_blank">MathNeuro
                                 project-team</a></br>
-                            <i>Inria branch of the University of Montpellier, France</i></br>
+                            <i>Inria branch at the University of Montpellier, France</i></br>
 
                         </td>
                     </tr>
@@ -675,7 +675,7 @@
             </p>
 
             <p>
-                Inria branch of the University of Montpellier<br>
+                Inria branch at the University of Montpellier<br>
                 Bât 5 - CC05 017, office 03/142<br>
                 860 rue Saint-Priest<br>
                 34095 Montpellier Cedex 5<br>
