update title paper Mahraz

--- a/index.html
+++ b/index.html
@@ -307,9 +307,9 @@
                 </li>
                 <li>
                     <p>
-                        M. Behbood, <u>L. Lemaire</u>, J. H. Schleimer and S. Schreiber. Slow rhythmic activity from an
-                        interplay of voltage and extracellular concentration dynamics: a minimal biophysical
-                        mechanism for neuronal bursting, <em>under review</em>.
+                        M. Behbood, <u>L. Lemaire</u>, J. H. Schleimer and S. Schreiber. The
+                        Na<sup>+</sup>/K<sup>+</sup>-ATPase generically enables deterministic bursting in class I
+                        neurons by shearing the spike-onset bifurcation structure, <em>under review</em>.
                     </p>
                 </li>
                 <li>
