update with paper Mahraz and BCCN 2024

--- a/index.html
+++ b/index.html
@@ -307,9 +307,12 @@
                 </li>
                 <li>
                     <p>
-                        M. Behbood, <u>L. Lemaire</u>, J. H. Schleimer and S. Schreiber. The
-                        Na<sup>+</sup>/K<sup>+</sup>-ATPase generically enables deterministic bursting in class I
-                        neurons by shearing the spike-onset bifurcation structure, <em>under review</em>.
+                        M. Behbood, <u>L. Lemaire</u>, J. H. Schleimer and S. Schreiber. <a class="other_links"
+                            href="https://journals.plos.org/ploscompbiol/article?id=10.1371/journal.pcbi.1011751"
+                            target="_blank">The
+                            Na<sup>+</sup>/K<sup>+</sup>-ATPase generically enables deterministic bursting in class I
+                            neurons by shearing the spike-onset bifurcation structure</a>, <em>PLOS Computational
+                            Biology</em> 20 (8), e1011751, 2024.
                     </p>
                 </li>
                 <li>
@@ -422,6 +425,10 @@
 
             <p>
             <ul class="no_symbol">
+                <li>- <a class="other_links" href="https://bernstein-network.de/en/bernstein-conference/"
+                        target="_blank">Bernstein
+                        Conference 2024</a>
+                </li>
                 <li>- <a class="other_links"
                         href="https://bernstein-network.de/en/bernstein-conference/past-bernstein-conferences/bernstein-conference-2023/"
                         target="_blank">Bernstein
