add teaching Paris

--- a/index.html
+++ b/index.html
@@ -256,7 +256,6 @@
                     <li>- Bifurcation theory, multiple-timescale dynamics</li>
                     <li>- Conductance-based and integrate-and-fire neuron models</li>
                     <li>- Model reduction</li>
-                    <li>- Markov models of ion channels</li>
                 </ul>
 
                 </p>
@@ -639,6 +638,13 @@
 
             <table class="cv_small_table">
                 <tbody>
+                    <tr>
+                        <td>2025</td>
+                        <td>
+                            Master course "Mathematical and computational models in neuroscience", 10h</br>
+                            <i>Sorbonne Université - Campus Pierre-et-Marie-Curie, Paris</i>
+                        </td>
+                    </tr>
                     <tr>
                         <td>2023</td>
                         <td>
