--- a/index.html
+++ b/index.html
@@ -298,6 +298,22 @@
             <ul class="square">
                 <li>
                     <p>
+                        <u>L. Lemaire</u>, M. Desroches, S. Rodrigues and F. Campillo. <a class="other_links"
+                            href="https://arxiv.org/abs/2505.03919" target="_blank">Depolarization block induction via
+                            slow Na<sub>V</sub>1.1 inactivation in Dravet syndrome</a>,
+                        <em>submitted</em>.
+                    </p>
+                </li>
+                <li>
+                    <p>
+                        L. Preuss, J. H. Schleimer, <u>L. Lemaire</u> and S. Schreiber. Migraine mutations of the
+                        Na<sub>V</sub>1.1 channel cause an
+                        excitability switch and energetically expensive spikes,
+                        <em>in preparation</em>.
+                    </p>
+                </li>
+                <li>
+                    <p>
                         <u>L. Lemaire</u>, M. Behbood, J. H. Schleimer and S. Schreiber. Integrate-and-fire neuron with
                         potassium dynamics that capture switches in neuronal excitability class and firing regime,
                         <em>in
@@ -390,6 +406,10 @@
 
             <p>
             <ul class="no_symbol">
+                <li>- <a class="other_links" href="https://meetings.siam.org/sess/dsp_programsess.cfm?SESSIONCODE=84647"
+                        target="_blank">2025
+                        SIAM Conference on Applications of Dynamical Systems</a>
+                </li>
                 <li>- <a class="other_links" href="https://www.danieleavitabile.com/icmns24/" target="_blank">2024
                         International Conference on Mathematical Neuroscience</a>
                 </li>
@@ -424,6 +444,9 @@
 
             <p>
             <ul class="no_symbol">
+                <li>- <a class="other_links" href="https://dravetfoundation.eu/european-dravet-syndrome-conference/"
+                        target="_blank">European Dravet Syndrome Conference 2025</a>
+                </li>
                 <li>- <a class="other_links" href="https://bernstein-network.de/en/bernstein-conference/"
                         target="_blank">Bernstein
                         Conference 2024</a>
