add biorxiv link berlin paper and icmns 2025

--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
                                     class="other_links"
                                     href="https://www.inria.fr/en/inria-branch-university-montpellier"
                                     target="_blank">Inria
-                                    Branch at the University of Montpellier</a>, in the <a class="other_links"
+                                    Branch of the University of Montpellier</a>, in the <a class="other_links"
                                     href="https://team.inria.fr/mathneuro/" target="_blank">MathNeuro team</a>.
                             </p>
 
@@ -314,8 +314,10 @@
                 </li>
                 <li>
                     <p>
-                        <u>L. Lemaire</u>, M. Behbood, J. H. Schleimer and S. Schreiber. Integrate-and-fire neuron with
-                        potassium dynamics that capture switches in neuronal excitability class and firing regime,
+                        <u>L. Lemaire</u>, M. Behbood, J. H. Schleimer and S. Schreiber. <a class="other_links"
+                            href="https://www.biorxiv.org/content/10.1101/2025.06.14.659682v1"
+                            target="_blank">Integrate-and-fire neuron with
+                        potassium dynamics that capture switches in neuronal excitability class and firing regime</a>,
                         <em>in
                             preparation</em>.
                     </p>
@@ -406,6 +408,10 @@
 
             <p>
             <ul class="no_symbol">
+                <li>- <a class="other_links" href="https://www.crm.cat/international-conference-on-mathematical-neuroscience-icmns25/"
+                        target="_blank">2025
+                        International Conference on Mathematical Neuroscience</a>
+                </li>
                 <li>- <a class="other_links" href="https://meetings.siam.org/sess/dsp_programsess.cfm?SESSIONCODE=84647"
                         target="_blank">2025
                         SIAM Conference on Applications of Dynamical Systems</a>
