add cns workshop

--- a/index.html
+++ b/index.html
@@ -408,6 +408,9 @@
 
             <p>
             <ul class="no_symbol">
+                <li>- <a class="other_links" href="https://brady.cs.cas.cz/ocns-epilepsy-workshop"
+                        target="_blank">CNS*2025, "Computational strategies in epilepsy modelling and seizure control" workshop</a>
+                </li>
                 <li>- <a class="other_links" href="https://www.crm.cat/international-conference-on-mathematical-neuroscience-icmns25/"
                         target="_blank">2025
                         International Conference on Mathematical Neuroscience</a>
@@ -464,7 +467,7 @@
                 </li>
                 <li>- <a class="other_links"
                         href="https://cns2023.sched.com/event/1O6tZ/p254-integrate-and-fire-neuron-with-potassium-dynamics-capturing-activity-mediated-switches-in-firing-regimes"
-                        target="_blank">Annual CNS Meeting 2023</a>
+                        target="_blank">CNS*2023</a>
                 </li>
                 <li>- <a class="other_links" href="https://web.math.ku.dk/~susanne/ICMNS/" target="_blank">2019
                         International Conference on Mathematical Neuroscience</a>
