submitted berlin paper

--- a/index.html
+++ b/index.html
@@ -318,8 +318,7 @@
                             href="https://www.biorxiv.org/content/10.1101/2025.06.14.659682v1"
                             target="_blank">Integrate-and-fire neuron with
                         potassium dynamics that capture switches in neuronal excitability class and firing regime</a>,
-                        <em>in
-                            preparation</em>.
+                        <em>submitted</em>.
                     </p>
                 </li>
                 <li>
