--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
                         <u>L. Lemaire</u>, M. Desroches, S. Rodrigues and F. Campillo. <a class="other_links"
                             href="https://arxiv.org/abs/2505.03919" target="_blank">Depolarization block induction via
                             slow Na<sub>V</sub>1.1 inactivation in Dravet syndrome</a>,
-                        <em>submitted</em>.
+                        <em>under review</em>.
                     </p>
                 </li>
                 <li>
@@ -318,7 +318,7 @@
                             href="https://www.biorxiv.org/content/10.1101/2025.06.14.659682v1"
                             target="_blank">Integrate-and-fire neuron with
                         potassium dynamics that capture switches in neuronal excitability class and firing regime</a>,
-                        <em>submitted</em>.
+                        <em>under review</em>.
                     </p>
                 </li>
                 <li>
