--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
                         <u>L. Lemaire</u>, M. Desroches, S. Rodrigues and F. Campillo. <a class="other_links"
                             href="https://www.nature.com/articles/s41598-025-17468-2" target="_blank">Depolarization block induction via
                             slow Na<sub>V</sub>1.1 inactivation in Dravet syndrome</a>,
-                        <em>Scientific reports</em> 15 (1), 32749, 2025.
+                        <em>Scientific Reports</em> 15 (1), 32749, 2025.
                     </p>
                 </li>
                 <li>
