update biorxiv of elife paper

--- a/index.html
+++ b/index.html
@@ -315,9 +315,8 @@
                 <li>
                     <p>
                         <u>L. Lemaire</u>, M. Behbood, J. H. Schleimer and S. Schreiber. <a class="other_links"
-                            href="https://www.biorxiv.org/content/10.1101/2025.06.14.659682v1"
-                            target="_blank">Integrate-and-fire neuron with
-                        potassium dynamics that capture switches in neuronal excitability class and firing regime</a>,
+                            href="https://www.biorxiv.org/content/10.1101/2025.06.14.659682"
+                            target="_blank">Fitting bifurcation structure, not voltage traces: A biophysically inspired derivation of reduced neuron models exemplified by potassium dynamics</a>,
                         <em>under review</em>.
                     </p>
                 </li>
