add link code github

--- a/index.html
+++ b/index.html
@@ -301,7 +301,9 @@
                         <u>L. Lemaire</u>, M. Desroches, S. Rodrigues and F. Campillo. <a class="other_links"
                             href="https://www.nature.com/articles/s41598-025-17468-2" target="_blank">Depolarization block induction via
                             slow Na<sub>V</sub>1.1 inactivation in Dravet syndrome</a>,
-                        <em>Scientific Reports</em> 15 (1), 32749, 2025.
+                        <em>Scientific Reports</em> 15 (1), 32749, 2025. Code:
+                        <a class="black_links" href="https://github.com/louisianelemaire/Slow-NaV-inactivation-in-Dravet-syndrome" target="_blank">
+                            github.com/louisianelemaire/Slow-NaV-inactivation-in-Dravet-syndrome</a>
                     </p>
                 </li>
                 <li>
@@ -317,7 +319,7 @@
                         <u>L. Lemaire</u>, M. Behbood, J. H. Schleimer and S. Schreiber. <a class="other_links"
                             href="https://www.biorxiv.org/content/10.1101/2025.06.14.659682"
                             target="_blank">Fitting bifurcation structure, not voltage traces: A biophysically inspired derivation of reduced neuron models exemplified by potassium dynamics</a>,
-                        <em>under review</em>.
+                        <em>in revision</em>.
                     </p>
                 </li>
                 <li>
