--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
                             slow Na<sub>V</sub>1.1 inactivation in Dravet syndrome</a>,
                         <em>Scientific Reports</em> 15 (1), 32749, 2025. Code:
                         <a class="black_links" href="https://github.com/louisianelemaire/Slow-NaV-inactivation-in-Dravet-syndrome" target="_blank">
-                            github.com/louisianelemaire/Slow-NaV-inactivation-in-Dravet-syndrome</a>
+                            github.com/louisianelemaire/Slow-NaV-inactivation-in-Dravet-syndrome</a>.
                     </p>
                 </li>
                 <li>
@@ -366,7 +366,7 @@
                             migraine-related cortical spreading depolarization by hyperactivity of GABAergic neurons and
                             Na<sub>V</sub>1.1 channels</a>, <em>The Journal of Clinical Investigation</em> 131 (21),
                         e142203, 2021. Code: <a class="black_links" href="https://modeldb.science/267157"
-                            target="_blank">https://modeldb.science/267157</a>
+                            target="_blank">https://modeldb.science/267157</a>.
                     </p>
                 </li>
                 <li>
