--- a/index.html
+++ b/index.html
@@ -317,9 +317,9 @@
                 <li>
                     <p>
                         <u>L. Lemaire</u>, M. Behbood, J. H. Schleimer and S. Schreiber. <a class="other_links"
-                            href="https://www.biorxiv.org/content/10.1101/2025.06.14.659682"
+                            href="https://elifesciences.org/reviewed-preprints/108270"
                             target="_blank">Fitting bifurcation structure, not voltage traces: A biophysically inspired derivation of reduced neuron models exemplified by potassium dynamics</a>,
-                        <em>in revision</em>.
+                        <em>Elife 14</em> (in revision), 2025.
                     </p>
                 </li>
                 <li>
