--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
                         <u>L. Lemaire</u>, M. Behbood, J. H. Schleimer and S. Schreiber. <a class="other_links"
                             href="https://elifesciences.org/reviewed-preprints/108270"
                             target="_blank">Fitting bifurcation structure, not voltage traces: A biophysically inspired derivation of reduced neuron models exemplified by potassium dynamics</a>,
-                        <em>Elife 14</em> (in revision), 2025.
+                        <em>eLife</em> 14 (in revision), 2025.
                     </p>
                 </li>
                 <li>
