add coupled 80 workshop

--- a/index.html
+++ b/index.html
@@ -408,7 +408,10 @@
 
             <p>
             <ul class="no_symbol">
-                <li>- <a class="other_links" href="https://brady.cs.cas.cz/ocns-epilepsy-workshop"
+                <li>- <a class="other_links" href="https://www2.isep.ipp.pt/coupled80/"
+                        target="_blank">COUPLED 80 workshop</a>
+                </li>
+                <li>- <a class="other_links" href="https://cns2025florence.sched.com/event/26tVE/computational-strategies-in-epilepsy-modelling-and-seizure-control"
                         target="_blank">CNS*2025, "Computational strategies in epilepsy modelling and seizure control" workshop</a>
                 </li>
                 <li>- <a class="other_links" href="https://www.crm.cat/international-conference-on-mathematical-neuroscience-icmns25/"
